--- a/pyrust-py/pyproject.toml
+++ b/pyrust-py/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.4,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "pyrust-template"
+name = "pyrust-py"
 requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Rust",
