--- a/pyrust-py/Cargo.toml
+++ b/pyrust-py/Cargo.toml
@@ -2,6 +2,7 @@
 name = "pyrust-py"
 version = "0.1.0"
 edition = "2021"
+include = ["src", "python/pyrust_py", "pyproject.toml", "!*.so"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
