--- a/pyrust-py/pyproject.toml
+++ b/pyrust-py/pyproject.toml
@@ -17,5 +17,6 @@ tests = ["pytest"]
 
 [tool.maturin]
 python-source = "python"
+# module-name = "pyrust_py._pyrust_py"
 bindings = "pyo3"
-features = ["pyo3/extension-module"]
+features = ["pyo3/extension-module", "pyo3/experimental-inspect"]
