--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Change to the directory
+      - name: Change directory
         run: cd ${{ github.workspace }}/pyrust_py
       - name: Build wheels
         uses: PyO3/maturin-action@v1
