--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -107,7 +107,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: 'startsWith(github.ref, "refs/tags/")'
+    if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v3
@@ -116,7 +116,7 @@ jobs:
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
         env:
-            MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
           command: upload
           args: --non-interactive --skip-existing *
