--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -60,6 +60,7 @@ jobs:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
+          working-directory: ${{ github.workspace }}/pyrust-py
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -82,6 +83,7 @@ jobs:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
+          working-directory: ${{ github.workspace }}/pyrust-py
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -97,6 +99,7 @@ jobs:
         with:
           command: sdist
           args: --out dist
+          working-directory: ${{ github.workspace }}/pyrust-py
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
@@ -119,3 +122,4 @@ jobs:
         with:
           command: upload
           args: --non-interactive --skip-existing *
+          working-directory: ${{ github.workspace }}/pyrust-py
